--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.1",
     "boxicons": "^2.1.4",
+    "firebase": "^10.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
