--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "boxicons": "^2.1.4",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
